# depyler

./: CHANGELOG.md  Cargo.toml  Makefile  REFACTORING.md  TODO.md  test_chain4
crates/depyler-analysis/: Cargo.toml
crates/depyler-analysis/src/: lib.rs
crates/depyler-analysis/src/metrics/: complexity.rs  mod.rs  type_flow.rs
crates/depyler-analysis/src/quality/: mod.rs
crates/depyler-analysis/src/verify/: contract_verification.rs  contracts.rs  lifetime_analysis.rs  memory_safety.rs  mod.rs  properties.rs  quickcheck.rs
docs/: test-round-two-args-summary.md
examples/: Cargo.toml  basic_class_test.py  basic_class_test.rs  test_annotated_no_value.py  test_annotated_no_value.rs  test_dataflow_inference.rs  test_simple_annotated.py  test_simple_annotated.rs
tests/: array_generation_test.rs  array_literal_regression_test.rs  bug_regression_tests.rs  cli_flags_coverage_test.rs  cli_tests.rs  default_arguments_test.rs  depyler_0023_rust_keywords_test.rs  depyler_0024_copy_bug_test.rs  depyler_0264_dynamic_type_test.rs  depyler_0265_iterator_deref_test.rs  depyler_0266_boolean_conversion_test.rs  depyler_0267_index_access_test.rs  depyler_0268_index_negation_test.rs  depyler_0269_function_borrowing_test.rs  depyler_0270_result_unwrapping_test.rs  depyler_0271_main_return_type_test.rs  depyler_0272_unused_loop_vars_test.rs  depyler_0273_unnecessary_casts_test.rs  depyler_0280_isinstance_test.rs  depyler_0281_cow_type_test.rs  depyler_0282_unnecessary_returns_test.rs  error_handling_tests.rs  functional_tests.rs  generator_compilation_tests.rs  interactive_doctests.rs  (+9 more)
(+251 files in other folders)
