[package]
name = "depyler-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified analysis, quality, and verification engine for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
depyler-core = { version = "3.19.18", path = "../depyler-core" }
depyler-annotations = { version = "3.19.18", path = "../depyler-annotations" }

# Shared dependencies (from analyzer + quality + verify)
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
petgraph.workspace = true
indexmap.workspace = true
smallvec.workspace = true

# Quality dependencies
tempfile.workspace = true
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# Verification dependencies
quickcheck.workspace = true
proptest.workspace = true

[dev-dependencies]
insta.workspace = true
quickcheck_macros = "1.0"
